fix layout issue, and faq overlap

--- a/src/styles/est-faq.css
+++ b/src/styles/est-faq.css
@@ -78,12 +78,6 @@ est-faq {
         margin-bottom: -45px;
         margin-top: 20px;
     }
-
-    .est-faq__container__item--answer--active--first {
-        padding-top: 60px;
-        top: -60px;
-        margin-bottom: -45px;
-    }
 }
 
 @media (max-width: 450px) {
@@ -99,16 +93,10 @@ est-faq {
         content: "";
     }
 
-    .est-faq__container__item--answer--active{
+    .est-faq__container__item--answer--active, .est-faq__container__item--answer--active--first {
         padding-top: 50px;
         top: -65px;
         margin-bottom: -45px;
         margin-top: 20px;
-    }
-
-    .est-faq__container__item--answer--active--first {
-        padding-top: 60px;
-        top: -60px;
-        margin-bottom: -45px;
     }
 }
